package com.example.lista01;

public enum Sexo {
    MASCULINO,
    FEMININO,
}
